crates/ty_python_semantic/resources/mdtest/snapshots/typed_dict.md_-_`TypedDict`_-_Diagnostics_(e5289abf5c570c29).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: typed_dict.md - `TypedDict` - Diagnostics
mdtest path: crates/ty_python_semantic/resources/mdtest/typed_dict.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import TypedDict, Final
 2 | 
 3 | class Person(TypedDict):
 4 |     name: str
 5 |     age: int | None
 6 | 
 7 | def access_invalid_literal_string_key(person: Person):
 8 |     person["naem"]  # error: [invalid-key]
 9 | 
10 | NAME_KEY: Final = "naem"
11 | 
12 | def access_invalid_key(person: Person):
13 |     person[NAME_KEY]  # error: [invalid-key]
14 | 
15 | def access_with_str_key(person: Person, str_key: str):
16 |     person[str_key]  # error: [invalid-key]
17 | 
18 | def write_to_key_with_wrong_type(person: Person):
19 |     person["age"] = "42"  # error: [invalid-assignment]
20 | 
21 | def write_to_non_existing_key(person: Person):
22 |     person["naem"] = "Alice"  # error: [invalid-key]
23 | 
24 | def write_to_non_literal_string_key(person: Person, str_key: str):
25 |     person[str_key] = "Alice"  # error: [invalid-key]
26 | 
27 | def create_with_invalid_string_key():
28 |     # error: [invalid-key]
29 |     alice: Person = {"name": "Alice", "age": 30, "unknown": "Foo"}
30 | 
31 |     # error: [invalid-key]
32 |     bob = Person(name="Bob", age=25, unknown="Bar")
33 | from typing_extensions import ReadOnly
34 | 
35 | class Employee(TypedDict):
36 |     id: ReadOnly[int]
37 |     name: str
38 | 
39 | def write_to_readonly_key(employee: Employee):
40 |     employee["id"] = 42  # error: [invalid-assignment]
41 | def write_to_non_existing_key_single_quotes(person: Person):
42 |     # error: [invalid-key]
43 |     person['naem'] = "Alice"  # fmt: skip
```

# Diagnostics

```
error[invalid-key]: Unknown key "naem" for TypedDict `Person`
  --> src/mdtest_snippet.py:8:5
   |
 7 | def access_invalid_literal_string_key(person: Person):
 8 |     person["naem"]  # error: [invalid-key]
   |     ------ ^^^^^^ Did you mean "name"?
   |     |
   |     TypedDict `Person`
 9 |
10 | NAME_KEY: Final = "naem"
   |
info: rule `invalid-key` is enabled by default
5  |     age: int | None
6  | 
7  | def access_invalid_literal_string_key(person: Person):
   -     person["naem"]  # error: [invalid-key]
8  +     person["name"]  # error: [invalid-key]
9  | 
10 | NAME_KEY: Final = "naem"
11 | 
note: This is an unsafe fix and may change runtime behavior

```

```
error[invalid-key]: Unknown key "naem" for TypedDict `Person`
  --> src/mdtest_snippet.py:13:5
   |
12 | def access_invalid_key(person: Person):
13 |     person[NAME_KEY]  # error: [invalid-key]
   |     ------ ^^^^^^^^ Unknown key "naem" - did you mean "name"?
   |     |
   |     TypedDict `Person`
14 |
15 | def access_with_str_key(person: Person, str_key: str):
   |
info: rule `invalid-key` is enabled by default

```

```
error[invalid-key]: TypedDict `Person` can only be subscripted with a string literal key, got key of type `str`
  --> src/mdtest_snippet.py:16:12
   |
15 | def access_with_str_key(person: Person, str_key: str):
16 |     person[str_key]  # error: [invalid-key]
   |            ^^^^^^^
17 |
18 | def write_to_key_with_wrong_type(person: Person):
   |
info: rule `invalid-key` is enabled by default

```

```
error[invalid-assignment]: Invalid assignment to key "age" with declared type `int | None` on TypedDict `Person`
  --> src/mdtest_snippet.py:19:5
   |
18 | def write_to_key_with_wrong_type(person: Person):
19 |     person["age"] = "42"  # error: [invalid-assignment]
   |     ------ -----    ^^^^ value of type `Literal["42"]`
   |     |      |
   |     |      key has declared type `int | None`
   |     TypedDict `Person`
20 |
21 | def write_to_non_existing_key(person: Person):
   |
info: Item declaration
 --> src/mdtest_snippet.py:5:5
  |
3 | class Person(TypedDict):
4 |     name: str
5 |     age: int | None
  |     --------------- Item declared here
6 |
7 | def access_invalid_literal_string_key(person: Person):
  |
info: rule `invalid-assignment` is enabled by default

```

```
error[invalid-key]: Unknown key "naem" for TypedDict `Person`
  --> src/mdtest_snippet.py:22:5
   |
21 | def write_to_non_existing_key(person: Person):
22 |     person["naem"] = "Alice"  # error: [invalid-key]
   |     ------ ^^^^^^ Did you mean "name"?
   |     |
   |     TypedDict `Person`
23 |
24 | def write_to_non_literal_string_key(person: Person, str_key: str):
   |
info: rule `invalid-key` is enabled by default
19 |     person["age"] = "42"  # error: [invalid-assignment]
20 | 
21 | def write_to_non_existing_key(person: Person):
   -     person["naem"] = "Alice"  # error: [invalid-key]
22 +     person["name"] = "Alice"  # error: [invalid-key]
23 | 
24 | def write_to_non_literal_string_key(person: Person, str_key: str):
25 |     person[str_key] = "Alice"  # error: [invalid-key]
note: This is an unsafe fix and may change runtime behavior

```

```
error[invalid-key]: TypedDict `Person` can only be subscripted with a string literal key, got key of type `str`.
  --> src/mdtest_snippet.py:25:12
   |
24 | def write_to_non_literal_string_key(person: Person, str_key: str):
25 |     person[str_key] = "Alice"  # error: [invalid-key]
   |            ^^^^^^^
26 |
27 | def create_with_invalid_string_key():
   |
info: rule `invalid-key` is enabled by default

```

```
error[invalid-key]: Unknown key "unknown" for TypedDict `Person`
  --> src/mdtest_snippet.py:29:21
   |
27 | def create_with_invalid_string_key():
28 |     # error: [invalid-key]
29 |     alice: Person = {"name": "Alice", "age": 30, "unknown": "Foo"}
   |                     -----------------------------^^^^^^^^^--------
   |                     |                            |
   |                     |                            Unknown key "unknown"
   |                     TypedDict `Person`
30 |
31 |     # error: [invalid-key]
   |
info: rule `invalid-key` is enabled by default

```

```
error[invalid-key]: Unknown key "unknown" for TypedDict `Person`
  --> src/mdtest_snippet.py:32:11
   |
31 |     # error: [invalid-key]
32 |     bob = Person(name="Bob", age=25, unknown="Bar")
   |           ------ TypedDict `Person`  ^^^^^^^^^^^^^ Unknown key "unknown"
33 | from typing_extensions import ReadOnly
   |
info: rule `invalid-key` is enabled by default

```

```
error[invalid-assignment]: Cannot assign to key "id" on TypedDict `Employee`
  --> src/mdtest_snippet.py:40:5
   |
39 | def write_to_readonly_key(employee: Employee):
40 |     employee["id"] = 42  # error: [invalid-assignment]
   |     -------- ^^^^ key is marked read-only
   |     |
   |     TypedDict `Employee`
41 | def write_to_non_existing_key_single_quotes(person: Person):
42 |     # error: [invalid-key]
   |
info: Item declaration
  --> src/mdtest_snippet.py:36:5
   |
35 | class Employee(TypedDict):
36 |     id: ReadOnly[int]
   |     ----------------- Read-only item declared here
37 |     name: str
   |
info: rule `invalid-assignment` is enabled by default

```

```
error[invalid-key]: Unknown key "naem" for TypedDict `Person`
  --> src/mdtest_snippet.py:43:5
   |
41 | def write_to_non_existing_key_single_quotes(person: Person):
42 |     # error: [invalid-key]
43 |     person['naem'] = "Alice"  # fmt: skip
   |     ------ ^^^^^^ Did you mean 'name'?
   |     |
   |     TypedDict `Person`
   |
info: rule `invalid-key` is enabled by default
40 |     employee["id"] = 42  # error: [invalid-assignment]
41 | def write_to_non_existing_key_single_quotes(person: Person):
42 |     # error: [invalid-key]
   -     person['naem'] = "Alice"  # fmt: skip
43 +     person['name'] = "Alice"  # fmt: skip
note: This is an unsafe fix and may change runtime behavior

```
